fix some spacing issues and apply transition

--- a/assets/sass/site/_filters.scss
+++ b/assets/sass/site/_filters.scss
@@ -10,6 +10,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     margin: 30px;
+    transition: 3s;
     .filters-btn{
       display:flex;
       flex-direction: column;
