--- a/assets/sass/site/_footer.scss
+++ b/assets/sass/site/_footer.scss
@@ -1,7 +1,8 @@
 footer {
   display: flex;
   flex-direction: column;
-  height: 250px;
+  justify-content: space-between;
+  min-height: 500px;
   color: #CCC;
   background: #000;
   padding:50px;
@@ -11,8 +12,13 @@ footer {
     justify-content: space-around;
     align-items: flex-start;
     flex-direction: row;
-    widows: 100%;
+    width: 100%;
     .footer-item {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      align-items: flex-start;
+      height: 150px;
       a {
         color: #CCC;
         font-size:0.7em;
@@ -21,8 +27,9 @@ footer {
     .footer-social-item{
       display: flex;
       flex-direction: column;
-      align-items: center;
-      widows: 100%;
+      justify-content: flex-start;
+      align-items: flex-start;
+      height: 250px;
       .footer-social-item-title {
         margin-bottom: 25px;
       }
@@ -42,10 +49,8 @@ footer {
 
   .footer-credit{
     display: block;
-    widows: 100%;
     margin: 0 auto;
-    padding-top: 25px;
-    font-size: 0.5em;
+    // font-size: 0.8em;
   }
 
 
