--- a/assets/sass/site/_header.scss
+++ b/assets/sass/site/_header.scss
@@ -3,7 +3,7 @@ header {
   margin:0;
   min-height: 800px;
   width: 100%;
-  background: url('../images/banner.jpg') no-repeat top center fixed;
+  background: url('../images/banner.jpg') no-repeat top center;
   background-size: cover;
   position: relative;
   .overlay{
